# optimierung-von-programmen-labor

./: .gitignore  CMakeLists.txt  README.md  assembly.bat  build.bat  main.cpp
docu/: document.tex  measurement.tex  systemenvironment.tex  titlepage.tex
docu/algorithm/: algorithm.tex  insertionsort.tex  mergesort.tex  minimumsearch.tex  quicksort.tex  selectionsort.tex
docu/result/: insertionsort.tex  mergesort.tex  minimumsearch.tex  quicksort.tex  result.tex  selectionsort.tex
docu/results/: result.tex
src/algorithm/: InsertionSort.h  MergeSort.h  MinimumSearch.h  QuickSort.h  SelectionSort.h
src/alogrithms/: InsertionSort.h  MergeSort.h  MinimumSearch.h  QuickSort.h  SelectionSort.h
src/measurement/: ArrayUtilities.h  Chronometry.h  RuntimeConstants.h
src/runtime/: Constants.h
src/util/: ArrayTools.h  Chronometry.h  Result.h
test/: ArrayTests.h  CMakeLists.txt  InsertionSortTest.cpp  MergeSortTest.cpp  MinimumSearchTest.cpp  QuickSortTest.cpp  SelectionSortTest.cpp  TypedInsertionSortTest.cpp  TypedMergeSortTest.cpp  TypedMinimumSearchTest.cpp  TypedQuickSortTest.cpp  TypedSelectionSortTest.cpp
test/lib/gtest-1.8.0/: travis.sh
test/lib/gtest-1.8.0/googlemock/docs/: CheatSheet.md
test/lib/gtest-1.8.0/googlemock/docs/v1_7/: CheatSheet.md
test/lib/gtest-1.8.0/googlemock/scripts/: gmock-config.in
test/lib/gtest-1.8.0/googletest/m4/: gtest.m4
test/lib/gtest-1.8.0/googletest/scripts/: gtest-config.in
test/lib/gtest-1.8.0/googletest/xcode/Config/: General.xcconfig
test/util/: SimpleArrays.h  TypedArrayTest.cpp
